# limopack

./: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
doc/: limopack.8  limopack.8.md  limopak.8  limopak.8.md
scripts/: vendor.sh
src/: actions.rs  clidef.rs  logger.rs  main.rs  sysutils.rs
src/mdb/: mod.rs  modlist.rs  modules.rs
src/mtree/: kerman.rs  mod.rs  moddeps.rs
src/pakmod/: dpkgmod.rs  mod.rs  rmpak.rs
