[package]
name = "linmodpak"
version = "0.1.0"
edition = "2021"
authors = ["Bo Maryniuk <bo@maryniuk.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.24", features = ["derive", "color", "unstable-styles"] }
clap_complete = "4.3.2"
colored = "2.0.4"
log = "0.4.20"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
