[package]
name = "limopack"
version = "0.1.0"
edition = "2021"
authors = ["Bo Maryniuk <bo@maryniuk.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.24", features = ["derive", "color", "unstable-styles"] }
clap_complete = "4.3.2"
colored = "2.0.4"
exitcode = "1.1.2"
log = "0.4.20"
walkdir = "2.3.3"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
